--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,3 @@
-// ============================================ VAR
-
 @D: 100px; 
 @R:(@D/2);
 @B:(@R/8);
@@ -7,6 +5,7 @@
 @A: 9s;
 
 .layer{
+  color: black;
   position:absolute;
   top:50%; left:50%;
   margin-left:-@R/2;
